edgecore/webclient/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webclient
  labels:
    app: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webclient
  template:
    metadata:
      labels:
        app: webclient
    spec:
      hostNetwork: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/edge
                operator: DoesNotExist                
      containers:
      - name: webclient
        image: matlock08/kubeedge-client:0.0.2
        command: ["/client/client"]
        args: [""]
        ports:
          - containerPort: 1323
        imagePullPolicy: Always
        securityContext:
          privileged: true
      restartPolicy: Always
