edgecore/webclient/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webclient-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 1323
    targetPort: 1323
  selector:
    name: webclient
